# drcal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera-0.cameramodel  camera-1.cameramodel  pyproject.toml  vcpkg.json
.github/workflows/: pip_publish.yml
analyses/: extrinsics-stability.py  mrcal-convert-lensmodel-from-kalibr-fov  mrcal-reoptimize  mrcal-reproject-to-chessboard  mrcal-show-model-resolution.py  validate-uncertainty.py
analyses/dancing/: dance-study.py
analyses/noncentral/: trace-noncentral-ray.py
analyses/outlierness/: outlierness-test.py
analyses/sfm-experiments/: sfm.py
analyses/splines/: README  bsplines.py  show-fisheye-grid.py  verify-interpolated-surface.py
analyses/triangulation/: study.py
apps/: mrcal-calibrate-cameras.py  mrcal-convert-lensmodel.py  mrcal-from-cahvor.py  mrcal-from-ros.py
cpp_src/: basic-geometry.h  bindings.cpp  bindings_npsp_generated.c  bindings_poseutils_npsp_generated.c  bindings_triangulation_npsp_generated.c  cahvore.cc  cahvore.h  dogleg.c  drcal-internal.h  drcal-pywrap.c  drcal-types.h  drcal.c  drcal.h  heap.cc  heap.h  image.c  mrcal-image.h  mrcal-internal.h  mrcal-pywrap.c  mrcal.c  mrcal.h  opencv.c  poseutils-opencv.c  poseutils-uses-autodiff.cc  poseutils.c  poseutils.h  python-cameramodel-converter.c  python-cameramodel-converter.h  python-wrapping-utilities.h  scales.h  stereo-matching-libelas.cc  stereo-matching-libelas.h  stereo.c  stereo.h  traverse-sensor-links.c  triangulation.cc  triangulation.h  uncertainty.c
cpp_src/minimath/: minimath-extra.h
data/example_stereo/: corners.vnl
doc/: pydoc.py
nps_pywrap_bindings/: drcal-genpywrap.py  poseutils-genpywrap.py  triangulation-genpywrap.py
scripts/: elas-genpywrap.py  mrcal-calibrate-cameras.py  mrcal-convert-lensmodel.py  mrcal-cull-corners.py  mrcal-from-kalibr.py  mrcal-genpywrap.py  mrcal-graft-models.py  mrcal-pick-features.py  mrcal-reproject-image.py  mrcal-reproject-points.py  mrcal-triangulate.py  poseutils-genpywrap.py  triangulation-genpywrap.py
src/apps/: drcal_calibrate_cameras.py  drcal_convert_lensmodel.py  drcal_cull_corners.py  drcal_from_cahvor.py  drcal_from_kalibr.py  drcal_from_ros.py  drcal_graft_models.py  drcal_is_within_valid_intrinsics_region.py  drcal_reproject_image.py  drcal_show_splined_model_correction.py  mrcal-cull-corners.py  mrcal-is-within-valid-intrinsics-region.py  mrcal-reproject-points.py  mrcal-show-distortion-off-pinhole.py  mrcal-show-geometry.py  mrcal-show-projection-diff.py  mrcal-show-projection-uncertainty.py  mrcal-show-residuals-board-observation.py  mrcal-show-residuals.py  mrcal-show-splined-model-correction.py  mrcal-show-stereo-pair-diff.py  mrcal-show-valid-intrinsics-region.py  mrcal-stereo.py  mrcal-to-cahvor.py  mrcal-to-kalibr.py  mrcal-triangulate.py
src/drcal/: __init__.py  _poseutils_scipy.py  bindings.pyi  bindings_npsp.pyi  bindings_poseutils_npsp.pyi  bindings_triangulation_npsp.pyi  cahvor.py  calibration.py  calibration_objects.py  cameramodel.py  gnuplotlib.py  image_transforms.py  model_analysis.py  numpy_utils.py  poseutils.py  projections.py  stereo.py  synthetic_data.py  triangulation.py  utils.py  visualization.py
test/: test-broadcasting.py  test-cameramodel.py  test-extrinsics-moved-since-calibration.py  test-gradients.py  test-match-feature.py  test-optimizer-callback.py  test-poseutils-near-singularity.py  test-poseutils.py  test-projections.py  test-save-load-image.py  test-sfm-fixed-points.py  test-sfm-regularization-unity-cam01.py  test-stereo.py  test-surveyed-calibration.py  test-triangulation-uncertainty.py  test-triangulation.py  test-worst_direction_stdev.py  test_calibration_helpers.py
tests/: test-CHOLMOD-factorization.py  test-basic-calibration.py  test-cameramodel.py  test-compute-chessboard-corners-parsing.py  test-convert-lensmodel.py  test-gradients.py  test-graft-models.py  test-linearizations.py  test-mrcal-reproject-image--NOT-HOOKED-UP.py  test-poseutils-lib.py  test-projection--special-cases.py  test-projection-diff.py  test-projection-uncertainty.py  test-projections.py  test-propagate-calibration-uncertainty.py  test-py-gradients.py  test-pylib-projections.py  test-pywrap-functions.py  test-rectification-maps.py  test-sfm-fixed-points.py  test-sfm-regularization-unity-cam01.py  test-sfm-triangulated-points.py  test-solvepnp.py  test-sorted-eig.py  test-stereo-range.py  test-surveyed-calibration.py  test-traverse-sensor-links.py  test-triangulation-uncertainty.py  test-uncertainty-broadcasting.py  test_calibration_helpers.py  test_poseutils_helpers.py  test_sfm_helpers.py  testutils.py
tools/: build.py  build_config.py
