[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "drbuild"
version = "0.0.0"
description = "DrCal for camera calibrations"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.1",
    "numpy>=1.23",
    "pybind11>=3.0.1",
    "pybind11-stubgen>=2.5.5",
    "scipy>=1.16.2",
]

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
skip = ["*musllinux*", "*win*", "pp*"]
