[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "drcal"
version = "0.0.0"
description = "DrCal for camera calibrations"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.1",
    "gnuplotlib>=0.42",
    "matplotlib>=3.10.6",
    "numpy>=1.23",
    "numpysane>=0.40",
    "opencv-contrib-python>=4.11.0.86",
    "pybind11>=3.0.1",
    "pybind11-stubgen>=2.5.5",
    "pyyaml>=6.0.2",
    "scipy>=1.16.2",
    "setuptools>=80.9.0",
    "shapely>=2.1.1",
]

[project.scripts]
drcal-calibrate-cameras = "apps.drcal_calibrate_cameras:main"
drcal-show-splined-model-correction = "apps.drcal_show_splined_model_correction:main"

[tool.scikit-build]
minimum-version = "build-system.requires"

[tool.cibuildwheel]
skip = ["*musllinux*", "*win*", "pp*"]

[dependency-groups]
dev = ["ruff>=0.13.1"]

[tool.ruff]
ignore = ["E722"]
